# muz_lang

./: .clang-format  .gitignore  CMakeLists.txt  main.c
muz_lang/: muz_lexer.c  muz_lexer.h  muz_list.h  muz_log.h  muz_token.h
samples/: sample1.muzs  sample2.muzs
